@@ -103,7 +103,11 @@ TEST(selection)
 	int bg;
 
 	cmd = format_edit_selection_cmd(&bg);
+#ifdef _WIN32
+	assert_string_equal("vim -p \"lfile0\" \"lfile2\"", cmd);
+#else
 	assert_string_equal("vim -p lfile0 lfile2", cmd);
+#endif
 	free(cmd);
 }
 
